--- a/styles/options.css
+++ b/styles/options.css
@@ -19,7 +19,7 @@ body {
 	width: 100%;
 }
 
-.header>#title {
+.header>#titleText {
 	font-size: 1.5em;
 	font-weight: bold;
 	margin: .25em 0 .5em;
