--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
 	--background: hwb(0 95% 5%);
 	--foreground: hwb(0 5% 95%);
+	--gray: hwb(0 70% 30%);
 	--primary-base: hwb(0 0% 0%);
 	--primary-weak: hwb(0 65% 0%);
 	--primary-weakest: hwb(0 85% 0%);
@@ -10,6 +11,7 @@
 	:root {
 		--background: hwb(0 5% 95%);
 		--foreground: hwb(0 95% 5%);
+		--gray: hwb(0 30% 70%);
 		--primary-weak: hwb(0 0% 60%);
 		--primary-weakest: hwb(0 0% 80%);
 	}
